src/objects/MMPROV__c.object
<CustomObject>
    <description>(MBI) - MMD - Plan Sponsor - Pension Plan Service Provider information</description>
    <fields>
        <fullName>BUNDLED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bundled RK Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Click_To__c</fullName>
        <formula>HYPERLINK(&quot;https://na1.salesforce.com/&quot;&amp;Id&amp;&quot;/e&quot;,&quot;Edit&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Click To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOLLARS__c</fullName>
        <label>Dollars Managed ($000)</label>
        <precision>14</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Firm_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firm Link</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plan Providers - MMD</relationshipLabel>
        <relationshipName>MMD_Plan_Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOC__c</fullName>
        <label>Assets Managed (Local Curr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMD_Firm_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MMD Firm Profile</label>
        <referenceTo>MMCOMP__c</referenceTo>
        <relationshipLabel>Plan Providers</relationshipLabel>
        <relationshipName>Plan_Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMD_Pension_Plan__c</fullName>
        <label>MMD Pension Plan</label>
        <referenceTo>MMPLANS__c</referenceTo>
        <relationshipLabel>MMD Plan Providers</relationshipLabel>
        <relationshipName>MMD_Plan_Providers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PERCENT__c</fullName>
        <label>Percent Managed</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PROVNAME__c</fullName>
        <label>Provider Firm Name &amp; City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROV_NO__c</fullName>
        <label>Provider MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <formula>MMD_Pension_Plan__r.PLAN_NAME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <formula>MMD_Pension_Plan__r.Plan_Type_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Link</label>
        <referenceTo>MMCOMP__c</referenceTo>
        <relationshipLabel>Plans where Services are Provided</relationshipLabel>
        <relationshipName>R00N30000003AW4XEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SEQ_NO__c</fullName>
        <label>Plan Sequence #</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SERVICE_CODE__c</fullName>
        <label>Service Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Description__c</fullName>
        <formula>CASE( SERVICE_CODE__c ,
&quot;ACT&quot;,&quot;Actuary&quot;,
&quot;CON&quot;,&quot;Consultant&quot;,
&quot;CU&quot;,&quot;Custodian&quot;,
&quot;GCU&quot;,&quot;Global Custodian&quot;,
&quot;MTR&quot;,&quot;Master Trustee&quot;,
&quot;OC&quot;,&quot;OCIO&quot;,
&quot;REC&quot;,&quot;Recordkeeper&quot;,
&quot;TPA&quot;,&quot;Third Party Administrator&quot;, 
SERVICE_CODE__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YEAR_HIRED__c</fullName>
        <label>Year Hired</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>MMD Plan Provider</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Plan Providers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>